# lightbulb

./: .config.yaml  .gitignore  .gitlab-ci.yml  Dockerfile  README.md
.github/: copilot-instructions.md
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  constants.tsx  externalDataSources.tsx  index.css  main.tsx  model.tsx  statusManager.tsx
frontend/src/components/: BaseNode.tsx  DetailedFlowView.tsx  ServiceCard.tsx  ServiceList.tsx
server/: pyproject.toml
server/server/: DATABASE_SETUP.md  app.py  bootstrap.py  inspectTemporalWorkflow.py  model.py  orm.py  validate_schema.py
server/server/config/: services.yaml
